RESOLVED FIXED204061
[LFC][IFC] Line::m_trimmableRuns does not need to be a ListHashSet
https://bugs.webkit.org/show_bug.cgi?id=204061
Summary [LFC][IFC] Line::m_trimmableRuns does not need to be a ListHashSet
alan
Reported 2019-11-10 21:13:34 PST
use Vector instead.
Attachments
Patch (2.57 KB, patch)
2019-11-10 21:17 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-11-10 21:13:54 PST
alan
Comment 2 2019-11-10 21:17:49 PST
WebKit Commit Bot
Comment 3 2019-11-11 07:13:44 PST
Comment on attachment 383253 [details] Patch Clearing flags on attachment: 383253 Committed r252322: <https://trac.webkit.org/changeset/252322>
WebKit Commit Bot
Comment 4 2019-11-11 07:13:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.