[LFC][IFC] Line::m_trimmableRuns does not need to be a ListHashSet https://bugs.webkit.org/show_bug.cgi?id=204061 <rdar://problem/57064178>

Reviewed by Antti Koivisto.

Switch from ListHashSet to Vector.

* layout/inlineformatting/InlineLine.cpp:
(WebCore::Layout::Line::removeTrailingTrimmableContent):
(WebCore::Layout::Line::appendTextContent):
* layout/inlineformatting/InlineLine.h:


Canonical link: https://commits.webkit.org/217381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252322 268f45cc-cd09-0410-ab3c-d52691b4dbfc